--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<script type="text/javascript" src="js/script.js" ></script>
 </head>
-
 <body>
 	<div class="music">
 		<img src="image/music_pointer.png">
@@ -24,16 +23,16 @@
 	</div>
 	<div class="page" id="page2">
 		<div class="bg p2_bg_loading"></div>
-		<div class="bg"></div>		
+		<div class="bg"></div>
+		<div class="p2_circle"></div>
+		<div class="p2_2016"></div>		
 	</div>
 	<div class="page" id="page3">
 		<div class="bg"></div>
-		<div class="p3"></div>
+		<div class="p3_blessing"></div>
 	</div>
-
-
 	<audio autoplay="true">
-		<source src="audio/m.mp4" type="audio/mpeg">
+		<source src="audio/M.mp4" type="audio/mpeg">
 	</audio>
 </body>
 </html>
