--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="p3_blessing"></div>
 	</div>
 	<audio autoplay="true">
-		<source src="audio/M.mp4" type="audio/mpeg">
+		<source src="audio/M.ncm" type="audio/mpeg">
 	</audio>
 </body>
 </html>
