--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<div class="bg"></div>
 	</div>
 	<audio autoplay="true">
-		<source src="audio/mama.mp3" type="mpeg">
+		<source src="audio/mama.mp3" type="audio/mpeg">
 	</audio>
 </body>
 </html>
