--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 		<div class="bg"></div>	
 	</div>
 	<div class="page" id="page3">
+		<div class="bg p3_bg_loading"></div>
+		<div class="bg"></div>	
+	</div>
+
+	<div class="page" id="page4">
 		<div class="bg"></div>
 	</div>
 	
