--- a/index.html
+++ b/index.html
@@ -5,41 +5,34 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
-	<title>母亲节快乐！</title>
+	<title>夏目主题音乐贺卡</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<script type="text/javascript" src="js/script.js" ></script>
 </head>
 <body>
-
 	<div class="music">
 		<img src="image/music_pointer.png">
 		<img id="music" class="play" src="image/music_disc.png">
 	</div>
-
-	<audio autoplay="true">
-		<source src="audio/mama.mp3" type="audio/mpeg">
-	</audio>
 	<div id="n1"></div>
 	<div id="n2"></div>
-
-	
 	<div class="page" id="page1">
 		<div class="bg"></div>
 		<div class="p1_lantern"></div>
-		<div class="p1_imooc"><p class="p1_cc">点击屏幕<br>进入～</p></div>
+		<div class="p1_imooc"><p class="p1_cc">点击屏幕<br>进入妖怪的世界</p></div>
 	</div>
 	<div class="page" id="page2">
 		<div class="bg p2_bg_loading"></div>
-		<div class="bg"></div>	
+		<div class="bg"></div>
+		<div class="p2_circle"></div>
+		<div class="p2_2016"></div>		
 	</div>
 	<div class="page" id="page3">
-		<div class="bg p3_bg_loading"></div>
-		<div class="bg"></div>	
-	</div>
-
-	<div class="page" id="page4">
 		<div class="bg"></div>
+		<div class="p3_blessing"></div>
 	</div>
-	
+	<audio autoplay="true">
+		<source src="audio/godbless.mp3" type="audio/mpeg">
+	</audio>
 </body>
 </html>
