--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
 	<meta name="format-detection" content="telephone=no">
-	<title>夏目主题音乐贺卡</title>
+	<title>㊗️妈妈 母亲节快乐！</title>
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 	<script type="text/javascript" src="js/script.js" ></script>
 </head>
@@ -19,7 +19,7 @@
 	<div class="page" id="page1">
 		<div class="bg"></div>
 		<div class="p1_lantern"></div>
-		<div class="p1_imooc"><p class="p1_cc">点击屏幕<br>进入妖怪的世界</p></div>
+		<div class="p1_imooc"><p class="p1_cc">点击屏幕<br>进入~</p></div>
 	</div>
 	<div class="page" id="page2">
 		<div class="bg p2_bg_loading"></div>
